# test-monorepo

./: README.md
.devcontainer/: devcontainer.json
server/: pyproject.toml
